--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,9 +17,33 @@ header > h1 {
     padding: 10px;
     text-align: center;
 }
-menu > ul {
-    list-style: none;
+
+i#burger{
+    background-color: rgb(91, 89, 89);
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
 }
+img#pao{
+    background-color: aqua;
+    width: 20px;
+    padding: 5px;
+    margin-top: 10px;
+}
+i#burger:hover{
+    background-color: white;
+    color: green;
+}
+
+menu {
+    display: none;
+}
+menu > ul {
+    list-style-type: none;
+}
+
 menu > ul > li a {
     display: block;
     padding: 10px;
